# Media_portfolio

./: README.md
backend-api/: .gitignore  Cargo.toml  README.md  doc.css
backend-api/src/: db.rs  lib.rs  main.rs  routes.rs
backend-api/src/handlers/: auth.rs  categories.rs  mod.rs  models.rs  photos.rs  stats.rs  videos.rs
backend-api/src/models/: admin.rs  category.rs  mod.rs  model.rs  photo.rs  video.rs
portfolio-fe/: .prettierrc.json  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vue.config.js
portfolio-fe/src/: App.vue  api.ts  main.ts  vite-env.d.ts
portfolio-fe/src/components/: CategoryFilter.vue  FeedbackModal.vue  HandGestureNavigation.vue  Login.vue  ModelView.vue  PhotoView.vue  Photos.vue  ProfileCard.vue  TypeWriterText.vue  UploadForm.vue  Videos.vue
portfolio-fe/src/models/: model.ts
portfolio-fe/src/router/: index.ts
portfolio-fe/src/services/: feedbackService.ts
portfolio-fe/src/types/: firebase-types.d.ts
portfolio-fe/src/utils/: AuthStore.ts  firebase.ts  imageClassifier.ts
portfolio-fe/src/views/: AboutMe.vue  Model.vue  Photos.vue  PixelCanvas.vue  Sandbox.vue  Videos.vue  Welcome.vue
