[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
bytes = "1.0"
axum = { version = "0.6", features = ["multipart"] }  
tokio = { version = "1", features = ["full"] }  
tower-http = { version = "0.4", features = ["fs", "cors"] }
http = "0.2"
uuid = { version = "1", features = ["v4"] }  
serde = { version = "1", features = ["derive"] } 
serde_json = "1.0"
image = "0.24"
mime_guess = "2.0"

